--- a/app/src/main/res/menu/forecast.xml
+++ b/app/src/main/res/menu/forecast.xml
@@ -7,8 +7,14 @@
         android:title="@string/action_refresh"
         app:showAsAction="ifRoom"/>
 
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        app:showAsAction="never"
+        android:orderInCategory="100"/>
     <item
         android:id="@+id/action_map"
         android:title="@string/action_map"
         app:showAsAction="never" />
+
+
 </menu>
