--- a/app/src/main/res/layout/extra_weather_details.xml
+++ b/app/src/main/res/layout/extra_weather_details.xml
@@ -10,7 +10,11 @@
         android:id="@+id/extra_details"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="32dp">
+        android:background="@color/detail_accent_pane_background"
+        android:paddingTop="@dimen/forecast_detail_vertical_padding"
+        android:paddingBottom="@dimen/forecast_detail_vertical_padding"
+        android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
+        android:paddingRight="@dimen/forecast_detail_horizontal_padding">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/horizontal_middle"
@@ -21,8 +25,7 @@
 
         <TextView
             android:id="@+id/humidity_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/DetailLabel"
             android:text="@string/humidity_label"
             app:layout_constraintLeft_toLeftOf="@+id/extra_details"
             app:layout_constraintTop_toTopOf="@+id/extra_details"
@@ -31,8 +34,8 @@
 
         <TextView
             android:id="@+id/pressure_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/DetailLabel"
+
             android:text="@string/pressure_label"
             app:layout_constraintBottom_toBottomOf="@id/extra_details"
             app:layout_constraintLeft_toLeftOf="@+id/extra_details"
@@ -40,8 +43,8 @@
 
         <TextView
             android:id="@+id/wind_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/DetailLabel"
+
             android:text="@string/wind_label"
             app:layout_constraintTop_toBottomOf="@+id/pressure_label"
             app:layout_constraintLeft_toLeftOf="@+id/extra_details"
@@ -51,24 +54,23 @@
 
         <TextView
             android:id="@+id/humidity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/ExtraWeatherDetails"
             android:text="38%"
             app:layout_constraintBottom_toBottomOf="@id/humidity_label"
             app:layout_constraintLeft_toLeftOf="@id/horizontal_middle" />
 
         <TextView
             android:id="@+id/pressure"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/ExtraWeatherDetails"
+
             android:text="900 hPa"
             app:layout_constraintBottom_toBottomOf="@id/pressure_label"
             app:layout_constraintLeft_toLeftOf="@id/horizontal_middle" />
 
         <TextView
             android:id="@+id/wind"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/ExtraWeatherDetails"
+
             android:text="4 km/h NW"
             app:layout_constraintBottom_toBottomOf="@id/wind_label"
             app:layout_constraintLeft_toLeftOf="@id/horizontal_middle" />
