--- a/app/src/main/res/layout/forecast_list_item.xml
+++ b/app/src/main/res/layout/forecast_list_item.xml
@@ -3,14 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="12dp"
-    android:paddingTop="12dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingBottom="@dimen/list_item_padding_vertical"
+    android:paddingTop="@dimen/list_item_padding_vertical"
+    android:paddingLeft="@dimen/list_item_padding_horizontal"
+    android:paddingRight="@dimen/list_item_padding_horizontal">
 
     <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/list_icon"
+        android:layout_height="@dimen/list_icon"
         android:id="@+id/weather_icon"
         app:srcCompat="@drawable/art_clouds"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,8 +25,8 @@
         android:text="Today, April 2"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintLeft_toRightOf="@id/weather_icon"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="@dimen/list_item_date_start_margin"
+        android:layout_marginLeft="@dimen/list_item_date_start_margin"
         />
 
     <TextView
@@ -43,7 +43,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="19\u00b0"
-        android:textSize="24sp"
+        android:layout_marginRight="@dimen/forecast_temperature_space"
+        android:layout_marginEnd="@dimen/forecast_temperature_space"
+        android:fontFamily="sans-serif-light"
+        android:textSize="@dimen/forecast_text_size"
         app:layout_constraintTop_toTopOf="@+id/guideline"
         app:layout_constraintBottom_toBottomOf="@id/guideline"
         app:layout_constraintRight_toLeftOf="@id/low_temperature"/>
@@ -54,7 +57,8 @@
         android:layout_height="wrap_content"
         android:gravity="end"
         android:text="10\u00b0"
-        android:textSize="24sp"
+        android:fontFamily="sans-serif-light"
+        android:textSize="@dimen/forecast_text_size"
         app:layout_constraintBottom_toBottomOf="@id/guideline"
         app:layout_constraintTop_toTopOf="@+id/guideline"
         app:layout_constraintRight_toRightOf="parent" />
