--- a/app/src/main/res/layout/primay_weather_info.xml
+++ b/app/src/main/res/layout/primay_weather_info.xml
@@ -9,7 +9,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/today_touch_selector"
         android:paddingTop="@dimen/today_forecast_list_item_vertical_padding"
         android:paddingBottom="@dimen/today_forecast_list_item_vertical_padding">
 
@@ -24,8 +23,8 @@
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Today, April 2"
-            android:textColor="@color/white"
+            android:text="Sunday, April 2"
+            android:textColor="@color/secondary_text"
             android:fontFamily="sans-serif"
             android:textSize="20sp"
             android:layout_marginBottom="16dp"
@@ -50,7 +49,7 @@
             android:layout_height="wrap_content"
             android:text="Rainy"
             android:textSize="20sp"
-            android:textColor="@color/white"
+            android:textColor="@color/secondary_text"
             app:layout_constraintLeft_toLeftOf="@id/weather_icon"
             app:layout_constraintRight_toRightOf="@id/weather_icon"
             app:layout_constraintTop_toBottomOf="@id/weather_icon"
@@ -63,7 +62,7 @@
             android:layout_height="wrap_content"
             android:text="19\u00b0"
             android:fontFamily="sans-serif-light"
-            android:textColor="@color/white"
+            android:textColor="@color/primary_text"
             android:textSize="72sp"
             app:layout_constraintLeft_toLeftOf="@id/horizontal_middle"
             app:layout_constraintRight_toRightOf="parent"
@@ -78,7 +77,7 @@
             android:layout_height="wrap_content"
             android:text="10\u00b0"
             android:fontFamily="sans-serif-light"
-            android:textColor="@color/white"
+            android:textColor="@color/secondary_text"
             android:textSize="36sp"
             app:layout_constraintLeft_toLeftOf="@id/high_temperature"
             app:layout_constraintRight_toRightOf="@id/high_temperature"
