--- a/app/src/main/res/values/bools.xml
+++ b/app/src/main/res/values/bools.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <bool name="show_notifications_default">true</bool>
-
+    <bool name="use_today_layout">true</bool>
 </resources>
